# Imperialist-Agents

./: .gitignore  pyproject.toml  readme.md
config/: settings.yaml
imperialist_agents/: cli.py
imperialist_agents/connectors/: base.py  imap_adapter.py
imperialist_agents/connectors/db/: base.py  sqlite_adapter.py
imperialist_agents/core/: config.py  embeddings.py  execution.py  memory.py  models.py  planners.py  prompts.py  registry.py  types.py  verifier.py
imperialist_agents/skills/: base.py  file_ops.py  web_fetch.py
imperialist_agents/tests/: run_demo.py
